--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -120,7 +120,7 @@
             {% for user in usersTestimonials %}
                 <a href="{{ path("profil_show", {id: user.id}) }}" class="w-25 text-center">
                 {% if user.profilPhoto is not null%}
-                    <img src="{{ vich_uploader_asset(user, 'profilPhotoFile') }}" alt="{{ user.profilPhoto }}" class="avatar-testimony">
+                    <img src="{{ vich_uploader_asset(user, 'profilPhotoFile') | imagine_filter('avatar_thumb') }}" alt="{{ user.profilPhoto }}" class="avatar-testimony">
                 {% else %}
                     <img src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture " class="avatar-testimony">
                 {% endif %}
