--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -31,7 +31,7 @@
             <div class="container col-lg-6 col-12">
                 <label for="edit_profil_profilPhotoFile_file" class="form-group img-display">
                     {% if app.user.profilPhoto is not null%}
-                        <img id="output" src="{{ vich_uploader_asset(user, 'profilPhotoFile') }}" alt="{{ app.user.profilPhoto }}" class="profil-photo cursor-pointer">
+                        <img id="output" src="{{ vich_uploader_asset(user, 'profilPhotoFile') | imagine_filter('avatar_thumb') }}" alt="{{ app.user.profilPhoto }}" class="profil-photo cursor-pointer">
                     {% else %}
                         <img id="output" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture" class="profil-photo cursor-pointer">
                     {% endif %}
