Clan index display Ok !

--- a/assets/styles/challengeShow.scss
+++ b/assets/styles/challengeShow.scss
@@ -45,6 +45,15 @@
   }
 }
 
+.journey-link-dark {
+    cursor: pointer;
+    color: $black;
+
+    &:hover {
+        color: $black;
+    }
+}
+
 .title-info-event {
     h3 {
         text-align: center;
