--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -1,38 +1,116 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Clan{% endblock %}
+{% block title %}Clan #{{ clan.id }}{% endblock %}
+
+{% block background %}
+    class="background-profile" style="background:
+    {% if clan.banner is not null %}
+        url('{{ vich_uploader_asset(clan, 'bannerFile')}}')
+    {% else %}
+        url('{{ asset('build/images/background/bgimg' ~ random(1, 11) ~ '.jpeg') }}')
+    {% endif %} no-repeat fixed center; background-size: cover;"
+{% endblock %}
 
 {% block body %}
-    <h1>Clan</h1>
+    <header class="arrow-header my-3 text-uppercase">
+        <h1>{{ clan.name }}</h1>
+        <p class="m-0">Créé le {{ clan.createdAt |format_datetime(pattern="dd MMMM Y",locale='fr') }} par {{ clan.creator.pseudo? clan.creator.pseudo : clan.creator.firstname ~' '~ clan.creator.lastname}}</p>
+    </header>
+    <section class="container px-5 my-2 my-md-5">
+        <div class="row justify-content-center justify-content-md-around">
+            <div class="col-lg-6 text-center my-3">
+                {% if clan.logo is not null%}
+                    <img src="{{ vich_uploader_asset(clan, 'logoFile') | imagine_filter('square_logo_thumb')}}" alt="logo du clan" class="profil-photo">
+                {% endif %}
+            </div>
+            <div class="col-lg-6 transparent-background-dark p-3">
+                <h2 class="challenge-quotation mb-4">Description du clan</h2>
+                <p class="challenge-description">{{ clan.description }}</p>
+            </div>
+        </div>
+    </section>
+    <section class="container d-flex flex-column flex-md-row align-items-center justify-content-around">
+        {% if app.user in clan.members %}
+            <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('clan_leave', {id: clan.id}) }}">
+                <input type="hidden" name="clanId" value="{{ clan.id }}">
+                <input type="hidden" name="token" value="{{ csrf_token('clan-leave') }}"/>
+                <button class="btn btn-register text-uppercase">Je veux quitter ce clan</button>
+            </form>
+        {% else %}
+            {% if clan.isPublic == true or app.user and app.user == clan.creator %}
+            <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('clan_join', {id: clan.id}) }}">
+                <input type="hidden" name="clanId" value="{{ clan.id }}">
+                <input type="hidden" name="token" value="{{ csrf_token('clan-join') }}"/>
+                <button class="btn text-uppercase btn-login">Je veux rejoindre ce clan</button>
+            </form>
+            {% endif %}
+        {% endif %}
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ clan.id }}</td>
-            </tr>
-            <tr>
-                <th>Name</th>
-                <td>{{ clan.name }}</td>
-            </tr>
-            <tr>
-                <th>Logo</th>
-                <td>{{ clan.logo }}</td>
-            </tr>
-            <tr>
-                <th>Banner</th>
-                <td>{{ clan.banner }}</td>
-            </tr>
-            <tr>
-                <th>Description</th>
-                <td>{{ clan.description }}</td>
-            </tr>
-        </tbody>
-    </table>
+        {% if app.user and app.user == clan.creator %}
+            <div class="form-kyosc">
+                <a class="btn text-uppercase btn-profil"
+                   data-toggle="modal" data-target="#modalInvitation"
+                >J'invite des nouveaux membres</a>
+            </div>
+        {% endif %}
+    </section>
 
-    <a href="{{ path('clan_index') }}">back to list</a>
+    {#        modal for clan invitation pop-up#}
+    <div class="modal fade" id="modalInvitation" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 class="modal-title" id="exampleModalLongTitle">INVITER VOS AMIS A REJOINDRE CE CLAN</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body d-flex justify-content-center">
+                    {% include 'clan/_form_clan-invitation.html.twig' %}
+                </div>
+            </div>
+        </div>
+    </div>
+    {#       end of modal for journey pop-up#}
 
-    <a href="{{ path('clan_edit', {'id': clan.id}) }}">edit</a>
-
-    {{ include('clan/_delete_form.html.twig') }}
+    <div class="container w-75 mx-auto my-5 challenge-organisator transparent-background-dark p-3">
+        <h2 class="mb-3 h5 text-uppercase text-center">Qui a créé ce clan ?</h2>
+        <div class="row">
+            <div class="col-lg-6 col-12 d-flex justify-content-center flex-column">
+                <a href="{{ path("profil_show", {id: clan.creator.id}) }}" class="text-center">
+                    {% if clan.creator.profilPhoto is not null %}
+                        <img class="profil-photo-challenge mb-2" src="{{ vich_uploader_asset(clan.creator, 'profilPhotoFile') }}" alt="profilPhoto of challenge creator">
+                    {% else %}
+                        <img class="profil-photo-challenge mb-2" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture">
+                    {% endif %}
+                </a>
+                <h4>{{ clan.creator.pseudo? clan.creator.pseudo : clan.creator.firstname ~' '~ clan.creator.lastname}}</h4>
+            </div>
+            <div class="col-lg-6 col-12 mt-lg-3 text-center">
+                <h3>Biographie</h3>
+                {% if clan.creator.biography is not null %}
+                    <p> {{ clan.creator.biography }}</p>
+                {% else %}
+                    <p>Le créateur.trice du clan n'a pas encore de biographie.</p>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
+        <h2 class="h5 text-uppercase text-center mb-4">{{ clan.members|length}} membre{{ clan.members|length>1?'s':''}}</h2>
+        <div class=" container d-flex justify-content-center">
+            {% for member in clan.members %}
+                <div class="d-flex flex-column align-items-center m-4">
+                    <a href="{{ path("profil_show", {id: member.id}) }}">
+                        {% if member.profilPhoto is not null %}
+                            <img class="participant-photo-challenge mb-2 avatar" src="{{ vich_uploader_asset(member, 'profilPhotoFile') }}" alt="photo de profil du membre du clan">
+                        {% else %}
+                            <img class="participant-photo-challenge mb-2 avatar" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="photo de profil par défaut">
+                        {% endif %}
+                    </a>
+                    <p>{{ member.pseudo? member.pseudo : member.firstname ~' '~ member.lastname}}</p>
+                </div>
+            {% endfor %}
+        </div>
+    </div>
 {% endblock %}
