--- a/templates/component/_header.html.twig
+++ b/templates/component/_header.html.twig
@@ -10,9 +10,11 @@
         {% endif %}
         <li> <a href="{{ path("home") }}">Accueil</a> </li>
         <li> <a href="{{ path("challenge_index") }}">Les challenges</a> </li>
+        <li> <a href="{{ path("clan_index") }}">Les clans</a> </li>
         {% if app.user %}
-            <li> <a href="{{ path("profil_my_profil") }}">Mon Espace</a> </li>
-            <li> <a href="{{ path("challenge_new") }}">Nouveau Challenge</a> </li>
+            <li> <a href="{{ path("profil_my_profil") }}">Mon espace</a> </li>
+            <li> <a href="{{ path("challenge_new") }}">Nouveau challenge</a> </li>
+            <li> <a href="{{ path("clan_new") }}">Nouveau clan</a> </li>
             <li> <a href="{{ path("app_logout") }}">Déconnexion</a> </li>
         {% else %}
             <li> <a href="{{ path("app_login") }}">Se connecter</a> </li>
