--- a/templates/clan/_form.html.twig
+++ b/templates/clan/_form.html.twig
@@ -22,19 +22,25 @@
         <div class="fileUpload col-lg-6 align-self-end">
             {{ form_errors(form.logoFile) }}
             {{ form_widget(form.logoFile) }}
-            {{ form_help(form.logoFile) }}
+            <div class="transparent-background-light py-1 px-3">
+                {{ form_help(form.logoFile) }}
+            </div>
         </div>
         <div class="fileUpload col-lg-6 align-self-end">
             {{ form_errors(form.bannerFile) }}
             {{ form_widget(form.bannerFile) }}
-            {{ form_help(form.bannerFile) }}
+            <div class="transparent-background-light py-1 px-3">
+                {{ form_help(form.bannerFile) }}
+            </div>
         </div>
     </div>
     <div class="form-row justify-content-between">
         <div class="form-group ">
             {{ form_errors(form.isPublic) }}
             {{ form_widget(form.isPublic) }}
-            {{ form_help(form.isPublic) }}
+            <div class="transparent-background-light py-1 px-3">
+                {{ form_help(form.isPublic) }}
+            </div>
         </div>
     </div>
     <div class="d-flex justify-content-center mt-4">
