Better view for challenge edition + better mobile view for mobile in my-profile

--- a/templates/challenge/edit.html.twig
+++ b/templates/challenge/edit.html.twig
@@ -8,6 +8,10 @@
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 {% endblock %}
 
+{% block background %}
+    class="background-profile" style="background: url('{{ asset('build/images/background/bgimg' ~ random(1, 11) ~ '.jpeg') }}') no-repeat fixed center; background-size: cover;"
+{% endblock %}
+
 {% block body %}
   {% include ('challenge/_form.html.twig') %}
 {% endblock body %}
