--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -28,7 +28,7 @@
     </div>
     <div class="container d-flex margin-bottom">
         <div class="row">
-            <div class="container col-lg-6 col-12">
+            <div class="container col-lg-6 col-12 profil-container">
                 <label for="edit_profil_profilPhotoFile_file" class="form-group img-display">
                     {% if app.user.profilPhoto is not null%}
                         <img id="output" src="{{ vich_uploader_asset(user, 'profilPhotoFile') | imagine_filter('avatar_thumb') }}" alt="{{ app.user.profilPhoto }}" class="profil-photo cursor-pointer">
