--- a/templates/clan/_delete_form.html.twig
+++ b/templates/clan/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('clan_delete', {'id': clan.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ clan.id) }}">
-    <button class="btn">Supprimer ce clan</button>
+    <button class="btn btn-delete m-1">Supprimer ce clan</button>
 </form>
