link in homepage for clans

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -112,6 +112,13 @@
         </div>
     </section>
     <section class="home-section testimonials hide-before-scroll show-on-scroll">
+        <div class="home-cartouche show-on-scroll hide-before-scroll">
+            <span id="all-projects">TOUS LES CLANS</span>
+            <a href="{{ path("clan_index") }}"><img class="home-multi-universes" src="{{ asset('build/images/logo/team.jpg') }}"></a>
+            <a href="{{ path("clan_index") }}" class="button-discover btn-lg">Je découvre</a>
+        </div>
+    </section>
+    <section class="home-section testimonials hide-before-scroll show-on-scroll">
         <h6 class="text-uppercase d-flex justify-content-center align-items-center">
             <img class="w-25 mx-4" src="{{ asset('build/images/picto/kampagne.png') }}">
             Témoignages
