--- a/templates/component/_footer.html.twig
+++ b/templates/component/_footer.html.twig
@@ -9,13 +9,13 @@
         <a href="{{ path('cgu') }}">Mentions légales</a>
         <a href="{{ path('about_cookies') }}">Cookies</a>
     </div>
-    <div class="dropdown-flag-container">
-        <a class="footer-flag-dropdown">
-            Langues △
-        </a>
-        <div class="flag-choice-dropdown flag-hide">
-            <a class="dropdown-item" href="#"><img src="{{ asset('build/images/flag/flagFR.png') }}" class="flag-logo">Fr</a>
-            <a class="dropdown-item" href="#"><img src="{{ asset('build/images/flag/flagEN.png') }}" class="flag-logo">En</a>
-        </div>
-    </div>
+{#    <div class="dropdown-flag-container">#}
+{#        <a class="footer-flag-dropdown">#}
+{#            Langues △#}
+{#        </a>#}
+{#        <div class="flag-choice-dropdown flag-hide">#}
+{#            <a class="dropdown-item" href="#"><img src="{{ asset('build/images/flag/flagFR.png') }}" class="flag-logo">Fr</a>#}
+{#            <a class="dropdown-item" href="#"><img src="{{ asset('build/images/flag/flagEN.png') }}" class="flag-logo">En</a>#}
+{#        </div>#}
+{#    </div>#}
 </footer>
