--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -16,6 +16,7 @@ $theme-colors: (
 $drawer-menu: #111;
 $black: #111;
 $transparent-black: #1118;
+$transparent-dark: #111d;
 $light: #fff;
 $transparent-light: #fff8;
 
