--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -31,6 +31,22 @@ body {
     min-height: 190vh;
 }
 
+.text-korange {
+    color: theme-color-level('korange');
+}
+
+.text-kred {
+    color: theme-color-level('kred');
+}
+
+.text-kgreen {
+    color: theme-color-level('kgreen');
+}
+
+.text-kblue {
+    color: theme-color-level('kblue');
+}
+
 .logo {
     height: auto;
     width: 60px;
@@ -59,6 +75,11 @@ body {
     background-color: $transparent-black;
     border-radius: 20px;
     color: $light;
+}
+
+.transparent-background-round-darker {
+    background-color: $transparent-dark;
+    border-radius: 50px;
 }
 
 .big-padding {
