--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -51,8 +51,8 @@
                             <p>{{challenge.distance}} km</p>
                         </div>
                         <div class="key-info-row">
-                            <p class="mb-0"><span class="key-info">PARCOURS:</span>
-                                <a class="journey-link" data-toggle="modal" data-target="#modalJourney">Voir le parcours</a>
+                            <p class="mb-0"><span class="key-info">ETAPES:</span>
+                                <a class="journey-link" data-toggle="modal" data-target="#modalJourney">Voir les grandes étapes</a>
                         </div>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">PARCOURS:</h2>
+                    <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">ETAPES:</h2>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -114,7 +114,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header align-self-center">
-                    <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">PARCOURS</h2>
+                    <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">ETAPES:</h2>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
