--- a/templates/challenge/edit.html.twig
+++ b/templates/challenge/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifiez votre challenge!{% endblock %}
+{% block title %}Modifiez votre aventure!{% endblock %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
