--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -148,7 +148,7 @@
             {{ form_end(form) }}
         </div>
         <div class="container margin">
-            <h2 class="mb-4"> Mes challenges - {{ challenges|length }}</h2>
+            <h2 class="mb-4"> Mes aventures - {{ challenges|length }}</h2>
         </div>
         {% if challenges|length < 3 %}
             {% for challenge in challenges|slice(0, 3) %}
