--- a/templates/challenge/new.html.twig
+++ b/templates/challenge/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Créez votre challenge!{% endblock %}
+{% block title %}Créez votre aventure!{% endblock %}
 {% block stylesheets %}
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
@@ -13,7 +13,7 @@
 
 {% block body %}
     <header class="arrow-header my-3 text-uppercase">
-        <h1 class="mt-2">Créez votre challenge sportif</h1>
+        <h1 class="mt-2">Créez votre aventure</h1>
     </header>
     <div>
         <div class="form-group">
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
-            <button type="submit" class="btn-login btn btn-lg">Valider mon challenge</button>
+            <button type="submit" class="btn-login btn btn-lg">Valider mon aventure</button>
             {{ form_end(form) }}
             </div>
         </div>
