--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -159,7 +159,7 @@
         {% endif %}
     </div>
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
-        <h2>Challenges du clan</h2>
+        <h2>Aventures du clan</h2>
         <div class="container form-kyosc mb-4">
             <div class="row justify-content-center">
                 {% for userChallenges in challenges %}
