--- a/templates/email/challenge-invitation.html.twig
+++ b/templates/email/challenge-invitation.html.twig
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Invitation à un challenge</title>
+    <title>Invitation à une aventure</title>
 </head>
     <body>
-        <h1>Invitation à s'inscrire à un challenge KYOSC</h1>
-        <p>Hello, vous avez été convié·e·s par {{ user.firstName }} {{ user.lastName }} à rejoindre le challenge "{{ challenge.title }}".</p>
-        <p>Voici le lien pour voir les détails de celui-ci:</p>
+        <h1>Invitation à s'inscrire à une aventure KYOSC</h1>
+        <p>Hello, vous avez été convié·e·s par {{ user.firstName }} {{ user.lastName }} à rejoindre l'aventure "{{ challenge.title }}".</p>
+        <p>Voici le lien pour voir les détails de celle-ci:</p>
         <p>
-            <a href="{{url('challenge_show', {id: challenge.id}) }}">Voir le challenge</a>
+            <a href="{{url('challenge_show', {id: challenge.id}) }}">Voir l'aventure</a>
         </p>
         <a href="https://kyosc.com/">
             <img src="https://kyosc.com/build/images/logo/kyoscblanc.0fb22059.png" style="height: 150px;background-color: black;">
