change multi-colored banner in challenge index (but not the logo yet)

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -17,7 +17,7 @@
         {{ render_esi(path('ch_cookie_consent.show_if_cookie_consent_not_set', { 'locale' : 'fr' })) }}
         {% if sport is not defined and (challenge is defined) %}
             {% set sportLogo = challenge.sports|length>1 ? asset(multiSportLogo) : (challenge.sports|length==1 ? "/uploads/logo/"~challenge.sports['0'].logo : null) %}
-            {% set sportColor = 'linear-gradient(to right, white 10%, #f29100, #e71374, #009eb5, #94c022)' %}
+            {% set sportColor = 'black' %}
         {% elseif sport is defined and sport %}
             {% set sportLogo = "/uploads/logo/"~sport.logo  %}
             {% set sportColor = sport.color  %}
@@ -26,7 +26,7 @@
             {% set sportColor = category.color  %}
         {% else %}
             {% set sportLogo = asset(multiSportLogo)  %}
-            {% set sportColor = 'linear-gradient(to right, white 10%, #f29100, #e71374, #009eb5, #94c022)' %}
+            {% set sportColor = 'black' %}
         {% endif %}
         <div class="arrow-background w-100"></div>
         {{ include('component/_header.html.twig') }}
