--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -31,7 +31,7 @@
                 {% else %} class="d-flex align-items-center text-uppercase mt-3 mb-5 bg-dark text-white"
                 {% endif %}>
             <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
-            <h1 class="challenge-index-title">Toutes les aventures
+            <h1 class="challenge-index-title text-white">Toutes les aventures
                 {% if category %}
                     "{{ category.name }}"
                 {% endif %}
