--- a/templates/challenge/new.html.twig
+++ b/templates/challenge/new.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Créez votre aventure!{% endblock %}
 {% block stylesheets %}
     <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 {% endblock %}
@@ -106,19 +107,22 @@
                     {{ form_help(form.distance) }}
                 </div>
             </div>
-
             <div class="form-row justify-content-between">
-                <div class="form-group">
-                    {{ form_errors(form.isPublic) }}
-                    {{ form_widget(form.isPublic) }}
-                    {{ form_help(form.isPublic) }}
+                <div class="form-group col-md-8">
+                    {{ form_errors(form.clans) }}
+                    {{ form_widget(form.clans) }}
+                    {{ form_help(form.clans) }}
                 </div>
-
                 <div class="form-group col-md-8">
                     <p class="mb-0 mandatory">*</p>
                     {{ form_errors(form.information) }}
                     {{ form_widget(form.information) }}
                     {{ form_help(form.information) }}
+                </div>
+                <div class="form-group">
+                    {{ form_errors(form.isPublic) }}
+                    {{ form_widget(form.isPublic) }}
+                    {{ form_help(form.isPublic) }}
                 </div>
             </div>
             <div class="d-flex justify-content-center mt-4">
@@ -154,6 +158,12 @@
         });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bs-custom-file-input/dist/bs-custom-file-input.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+    <script>
+        $(function(){
+            $('.select-clans').select2();
+        });
+    </script>
     <script>
         $(document).ready(function () {
             bsCustomFileInput.init()
