All clans -> text-white

--- a/templates/clan/index.html.twig
+++ b/templates/clan/index.html.twig
@@ -7,7 +7,7 @@
     {% else %} class="d-flex align-items-center text-uppercase mt-3 mb-5 bg-dark text-white"
             {% endif %}>
         <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
-        <h1 class="challenge-index-title">Tous les clans</h1>
+        <h1 class="challenge-index-title text-white">Tous les clans</h1>
     </header>
     <div class="form-kyosc d-flex align-items-center justify-content-center mb-5">
         <a href="{{ path('clan_new') }}" class="btn-login btn btn-lg">Créer un clan</a>
