--- a/templates/challenge/index.html.twig
+++ b/templates/challenge/index.html.twig
@@ -22,7 +22,7 @@
         <header class="d-flex align-items-center text-center text-uppercase mt-3 mb-5" style="background: {{ sportColor }};">
             <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
             <h1 class="challenge-index-title">
-                les prochaines aventures
+                les aventures
                 <span class="text-white">{{ sport.name }}</span>
             </h1>
         </header>
