thinner header for both clan and challenge index

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -259,3 +259,10 @@ body {
 .profil-container {
     max-width: 90vw;
 }
+
+.index-header {
+
+    @include md {
+        max-height: 110px;
+    }
+}
