--- a/templates/clan/index.html.twig
+++ b/templates/clan/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Tous les clans{% endblock %}
 
 {% block body %}
-    <header {% if sportColor %} class="d-flex align-items-center text-uppercase mt-3 mb-5" style="background: {{ sportColor }};"
+    <header {% if sportColor %} class="index-header d-flex align-items-center text-uppercase mt-5 mb-5" style="background: {{ sportColor }};"
     {% else %} class="d-flex align-items-center text-uppercase mt-3 mb-5 bg-dark text-white"
             {% endif %}>
         <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
